Made changes locally. Testing git changes from local machine

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hey there.. This is just the begining
+	    Edited the file from local machine.
+	    Testing commiting the code changes from local machine comamnd prompt.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
