--- a/ui/index.html
+++ b/ui/index.html
@@ -9,8 +9,8 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hey there.. This is just the begining
-            Edited the file from local machine.
+            Hey there.. This is just the begining<br>
+            Edited the file from local machine.<br>
             Testing commiting the code changes from local machine comamnd prompt.
         </div>
         <script type="text/javascript" src="/ui/main.js">
