--- a/ui/page-one.html
+++ b/ui/page-one.html
@@ -4,6 +4,7 @@
         <title>
             Page one | Suraj Shettigar
         </title>
+        <meta name= "viewport" content="width=device-width, initial-scale=1" />
     </head>
     
     <body>
