[imad-console] Updates ui/page-three.html

--- a/ui/page-three.html
+++ b/ui/page-three.html
@@ -7,10 +7,12 @@
         
         <style>
             .Mystyle{
-                max-width: 800px;
-                margin: 0 auto;
-                color: grey;
-                font-family: sans-serif;
+                    max-width: 800px;
+                    margin: 0 auto;
+                    color: #826e6e;
+                    font-family: sans-serif;
+                    padding-left: 20px;
+                    padding-right: 20px
             }
         </style>
     </head>
