[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,8 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hey there.. This is just the begining<br/><br/>
-            Edited the file from local machine.<br/><br/>
-            Testing commiting the code changes from local machine comamnd prompt.
+            Working on java scripts.<br/><br/>
+            Renderinng HTMLcontent from server in different ways.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
